# bandmap

./: .gitignore  Corrections.txt  DIFF  DIFFS  Friends.txt  Most_Wanted.txt  README.md  Release_Notes.txt  adif.py  bandmap.py  bm_gui.py  bm_udp.py  cluster_feed.py  get_node_list.py  gui.py  nodes.py  params.py  playpen.py  pyproject.toml  requirements.txt  settings.py  tcp_client.py  udp.py  watchdog.py  windoz.bat
dist_1.0/: bandmap.iss
stable/: DIFF  DIFFS  Friends.txt  bm_gui.py  bm_udp.py
work/: Release_Notes.txt  bandmap.py  bm_gui.py  cluster_feed.py  watchdog.py
work2/: Most_Wanted.txt  bm_gui.py  bm_udp.py  cluster_feed.py  params.py  playpen.py
work3/: DIFF  DIFFS  bandmap.py  bandmap.spec  bm_gui.py  bm_udp.py  cluster_feed.py  get_node_list.py  params.py  windoz.bat
